--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -262,12 +262,12 @@ To ensure high quality and trust, metadata and data must satisfy certain criteri
 %From 2012 to 2015 together with other Linked Data community members and \emph{SBE} experts, we developed diverse vocabularies to represent \emph{SBE} metadata and data in RDF.
 
 In this paper, we propose a system to classify RDF constraints and RDF constraint types, which in most cases correspond to RDF validation requirements.
-Constraints are instantiated from constraint types in order to validate both metadata and data represented by any vocabulary. 
+Constraints are instantiated from constraint types in order to validate both metadata and data represented by any vocabulary\tb{vocabulary-independent}. 
 Within the context of a complex and complete real world running example within the community around research data for the \emph{social, behavioural, and economic (SBE) sciences}, we prove the claim that the developed classification system perfectly applies for diverse vocabularies.
-We show how data in rectangular format and metadata on person-level data sets (i.e., data about individuals, households, businesses), aggregated data sets, thesauri, and statistical classifications are represented in RDF and how therefore reused vocabularies are interrelated.
+We show how data in rectangular format and metadata on record-unit data sets (i.e., data about individuals, households, businesses) or more specifically person-level data sets, aggregated data sets, thesauri, and statistical classifications are represented in RDF and how therefore reused vocabularies are interrelated.\tb{record-unit or more specific person-level data sets}
 We explain how \emph{SBE} (meta)data is validated against constraints to ensure high quality and trust.
 We exhaustively evaluated the metadata quality of large real world aggregated, person-level, and thesauri data sets (more than 4.2 billion triples and 15 thousand data sets) by means of constraints of the majority of constraint types.
-
+\tb{DCAT und XKOS nur im future work}
 \keywords{RDF Validation, RDF Constraints, DDI-RDF Discovery Vocabulary, RDF Data Cube Vocabulary, Rectangular Data, SKOS, XKOS, Linked Data, Semantic Web}
 \end{abstract}
 
@@ -289,7 +289,7 @@ an effort to leverage the mature DDI metadata model for the purposes of exposing
 
 For data archives, research institutes, and data libraries,
 RDF data validation according to predefined constraints is a much sought-after feature, 
-particularly as this is taken for granted in the XML world as DDI-XML documents are validated against diverse XSDs\footnote{\label{fnt:DDI-XSDs}\url{http://www.ddialliance.org/Specification/}}.
+particularly as this is taken for granted in the XML world as DDI-XML documents are validated against diverse XSDs\footnote{\label{fnt:DDI-XSDs}\url{http://www.ddialliance.org/Specification/}} (section \ref{related-work}).
 Several approaches exist to meet this requirement, ranging from using \emph{OWL 2} as a constraint language to \emph{SPIN}\footnote{\url{http://spinRDF.org/}}, a SPARQL-based way to formulate and check constraints. 
 There are also constraint languages like \emph{Shape Expressions}, \emph{Resource Shapes} or \emph{Description Set Profiles} that more or less explicitly address the \emph{SBE} community.
 In 2013, the W3C organized the RDF Validation Workshop\footnote{\url{http://www.w3.org/2012/12/rdf-val/}}, 
@@ -301,7 +301,7 @@ Bosch and Eckert \cite{BoschEckert2014} collected the findings of these working 
 which is available for contribution at \url{http://purl.org/net/rdf-validation}.
 The intention is to collaboratively collect case studies, use cases, requirements, and solutions regarding RDF validation in a comprehensive and structured way. 
 The requirements are classified to better evaluate existing solutions and each requirement is directly mapped to a constraint type which may be expressed by at least one existing constraint language.
-Bosch and Eckert \cite{BoschEckert2014-2} use SPIN as basis to define a
+Bosch and Eckert \cite{BoschEckert2014-2} \tb{why do we use spin?}use SPIN as basis to define a
 validation environment (available at \url{http://purl.org/net/rdfval-demo}) in which the validation of any constraint language\footnote{The only limitation is that constraint languages must be represented in RDF} can be implemented by representing them in SPARQL. 
 The SPIN engine checks for each resource if it satisfies all constraints, which are associated with its assigned classes, and generates a result RDF graph containing information about all constraint violations.
 
@@ -342,9 +342,9 @@ After validating the metadata according to these constraints, portals offer adde
 
 By its nature, person-level data is highly confidential and access is often only permitted for qualified researchers who must apply for access. 
 The purpose of publicly available aggregated data, on the other hand, is to get a first overview and to gain an interest in further analyses on the underlying person-level data.
-Researchers typically represent their results as aggregated data in form of two-dimensional tables with only a few columns (so-called \emph{variables} such as \emph{sex} or \emph{age}).
+Researchers typically represent their results as aggregated data in form of two-, three-, or four-dimensional tables with only a few columns (so-called \emph{variables} such as \emph{sex} or \emph{age}).
 The \emph{RDF Data Cube Vocabulary (QB)}\footnote{http://www.w3.org/TR/vocab-data-cube/} is a W3C recommendation for representing metadata on \emph{data cubes}, i.e. multi-dimensional aggregated data, in RDF \cite{Cyganiak2010}. 
-Aggregated data is derived from person-level data by statistics on groups or aggregates such as counts, means, and frequencies.
+Aggregated data is derived from person-level data by statistics on groups or aggregates such as frequencies and arithmetic means.
 %The SDMX metadata standard – used as the basis for \emph{QB} – and DDI have traditionally made efforts to align their content. 
 %Similarly, some of the developers of \emph{Disco} were also involved in the development of \emph{QB}, 
 %allowing the RDF versions of these standards to retain that alignment.
@@ -368,15 +368,17 @@ One very common example for detailed analyses on person-level data is the conten
 A \emph{study} represents the process by which a data set was generated or collected.
 Eurostat\footnote{\url{http://ec.europa.eu/eurostat}} is the statistical office of the European Union. Its task is to provide statistics at European level that enable comparisons between countries and regions.
 Eurostat provides publicly available European aggregated data (downloadable as CSV files) and its metadata.
-This way, researchers get promising findings (in form of published tables with a few columns), e.g., about the availability of childcare services in European Union Member States by year, duration, and child age  leading to subsequent research questions.
-%The first step is to determine in which countries the unemployment rate is collected and which other variables of each country-specific study are theoretically comparable and can therefore be used to answer the underlying research question.
+This way, researchers get promising findings (in form of published tables with a few columns).
 
+We use the availability of childcare services in European Union Member States by year, duration, and child age leading to subsequent research questions as running example of this paper.\tb{nochmals drüber schauen}
+%The first step is to determine in which countries the unemployment rate is collected and which other variables of each country-specific study are theoretically comparable and can therefore be used to answer the underlying research question.
 The variable \emph{formal childcare}\footnote{The data set is available at: \url{http://ec.europa.eu/eurostat/web/products-datasets/-/ilc_caindformal}} (in contrast to childcare at home)
 captures the measured availability of childcare services in percent over the population.
 The present data collection refers to data on formal childcare by the variables \emph{year}, \emph{duration} (in hours per week), \emph{age} of the child, and \emph{country}.
 Variables are constructed out of values (of one or multiple datatypes) and/or code lists.
 The variable \emph{age}, e.g., may be represented by values of the datatype \emph{xsd:nonNegativeInteger}, or by a code list including multiple age clusters (such as '0 to 10' and '11 to 20'). 
-To determine if variables measuring \emph{age} 
+
+To determine if variables measuring \emph{age}\tb{vielleicht zu den letzten paragraphen hinzufügen} 
 - collected for different countries (\emph{$age_{DE}$}, \emph{$age_{UK}$}) - 
 are comparable, both content-driven and technology-driven constraints are validated.
 Content-driven constraints ensure that the data is consistent with the intended syntax, semantics, and integrity of vocabularies' data models and 
@@ -399,6 +401,7 @@ To ensure high data quality, they have to check provenance information and to an
 \label{rdf-representation}
 
 In this section, we describe how data in rectangular format (\emph{PHDD}) and metadata on person-level data sets (\emph{Disco}), aggregated data sets (\emph{QB}), thesauri (\emph{SKOS}), and statistical classifications (\emph{XKOS}) are represented in RDF\footnote{The complete running example in RDF is available at: \url{https://github.com/boschthomas/rdf-validation/tree/master/data/running-example}} and how therefore reused vocabularies are interrelated.
+\tb{reihenfolge / DCAT fehlt}
 
 \textbf{Metadata on Aggregated Data.}
 The vocabulary \emph{QB} represents metadata on multi-dimensional aggregate data in two files, a \emph{qb:DataSet} and a \emph{qb:DataStructureDefinition}.
@@ -945,6 +948,7 @@ The constraints responsible for the largest numbers of constraint violations are
 We refer to the technical reports\footnotemark[\ref{technical-report-1}] \footnotemark[\ref{technical-report-2}] to get details about constraints on and the evaluation of \emph{XKOS} and \emph{PHDD} data sets.
 
 \section{Related Work}
+\label{related-work}
 
 %\textbf{XML vs. RDF Validation.}
 For data archives, research institutes, and data libraries,
@@ -958,6 +962,8 @@ With RDF validation, one can overcome drawbacks when validating XML documents\fo
 It cannot be validated, e.g., if each code of a variable's code list is associated with a category (\emph{R-86}).
 Additionally, it cannot be validated that if an element has a specific value, then certain child elements must be present (\emph{R-71}).  
 A comprehensive comparison of XML and RDF validation, however, is not within the scope of this paper.
+
+%validation or relational databases: types, relations
 
 %\textbf{RDF Data Cube Vocabulary.}
 A well-formed \emph{RDF Data Cube} is an a RDF graph describing one or more instances of \emph{qb:DataSet} for which each of the 22 integrity constraints\footnote{http://www.w3.org/TR/vocab-data-cube/\#wf}, defined within the \emph{QB} specification, passes.
@@ -980,7 +986,7 @@ and propose an extensible metric to measure the continuum of severity levels.
 We implemented a validation environment (available at \url{http://purl.org/net/rdfval-demo}) to validate RDF data according to constraints expressed my arbitrary constraint languages and to ensure correct syntax, semantics, and integrity of diverse vocabularies such as \emph{Disco, QB, PHDD, SKOS, and XKOS} (section \ref{implementation}).
 We exhaustively evaluated the metadata quality of large real world aggregated (\emph{QB}), person-level (\emph{Disco}), and thesauri (\emph{SKOS}) data sets by means of 212 $\mathcal{C}_{C}$ and $\mathcal{C}_{T}$ constraints of the majority of the constraint types.
 We validated more than 4.2 billion triples and 15 thousand data sets\footnote{The second appendix of this paper describing the evaluation in detail is available at: \url{http://arxiv.org/abs/1504.04478} \cite{BoschZapilkoWackerowEckert2015-2}.} (section \ref{evaluation}).
-
+\tb{auswahl an constraints, die validiert werden sollen / je nach use cases sollen z.b. nur technology-driven constraints validiert werden oder sind wichtiger / use solen je nach use case selbt bestimmen welche constraints validiert werden sollen}
 %It is still ongoing work to identify and classify constraints on rectangular data (\emph{PHDD}) and statistical classifications (\emph{XKOS}) and to actually evaluate the (meta)data quality of real world \emph{XKOS} and \emph{PHDD} data sets.
 
 \bibliography{../../literature/literature}{}
